fix: change katex to scroll when it overflow

--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -176,3 +176,7 @@ code[class*="language-"] {
 p img {
   max-width: 100%;
 }
+
+.math.math-display {
+  overflow: auto;
+}
